@@ -5,11 +5,12 @@ import static longtimenosee.logic.parser.CommandParserTestUtil.assertParseFailur
 import static longtimenosee.logic.parser.CommandParserTestUtil.assertParseSuccess;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
 import longtimenosee.logic.commands.FindCommand;
-import longtimenosee.model.person.NameContainsKeywordsPredicate;
+import longtimenosee.model.person.predicate.NameContainsKeywordsPredicate;
 
 public class FindCommandParserTest {
 
@@ -24,7 +25,7 @@ public class FindCommandParserTest {
     public void parse_validArgs_returnsFindCommand() {
         // no leading and trailing whitespaces
         FindCommand expectedFindCommand =
-                new FindCommand(new NameContainsKeywordsPredicate(Arrays.asList("Alice", "Bob")));
+                new FindCommand(List.of(new NameContainsKeywordsPredicate(Arrays.asList("Alice", "Bob"))));
         assertParseSuccess(parser, " n/Alice Bob", expectedFindCommand);
 
         // multiple whitespaces between keywords
